Refactor Cruise Control reconciliation out of the `KafkaAssemblyOperator` class (#6593)
* Refactor Cruise Control reconciliation out of the KafkaAssemblyOperator class

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Review comments

Signed-off-by: Jakub Scholz <www@scholzj.com>