@@ -15,7 +15,6 @@ import io.fabric8.kubernetes.api.model.LocalObjectReference;
 import io.fabric8.kubernetes.api.model.Secret;
 import io.fabric8.kubernetes.api.model.SecurityContext;
 import io.fabric8.kubernetes.api.model.Service;
-import io.fabric8.kubernetes.api.model.ServicePort;
 import io.fabric8.kubernetes.api.model.Volume;
 import io.fabric8.kubernetes.api.model.VolumeMount;
 import io.fabric8.kubernetes.api.model.apps.Deployment;
@@ -46,7 +45,6 @@ import io.strimzi.certs.CertAndKey;
 import io.strimzi.operator.cluster.ClusterOperatorConfig;
 import io.strimzi.operator.cluster.model.cruisecontrol.Capacity;
 import io.strimzi.operator.cluster.operator.resource.cruisecontrol.CruiseControlConfigurationParameters;
-import io.strimzi.operator.common.Annotations;
 import io.strimzi.operator.common.PasswordGenerator;
 import io.strimzi.operator.common.Reconciliation;
 import io.strimzi.operator.common.Util;
@@ -54,10 +52,8 @@ import io.strimzi.operator.common.model.Labels;
 import io.strimzi.operator.common.model.OrderedProperties;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -65,8 +61,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import static io.strimzi.operator.cluster.model.CruiseControlConfiguration.CRUISE_CONTROL_GOALS;
 import static io.strimzi.operator.cluster.model.CruiseControlConfiguration.CRUISE_CONTROL_DEFAULT_ANOMALY_DETECTION_GOALS;
+import static io.strimzi.operator.cluster.model.CruiseControlConfiguration.CRUISE_CONTROL_GOALS;
 import static io.strimzi.operator.cluster.model.VolumeUtils.createConfigMapVolume;
 import static io.strimzi.operator.cluster.model.VolumeUtils.createSecretVolume;
 import static io.strimzi.operator.cluster.model.VolumeUtils.createVolumeMount;
@@ -100,23 +96,17 @@ public class CruiseControl extends AbstractModel {
 
     protected static final String API_AUTH_CREDENTIALS_FILE = API_AUTH_CONFIG_VOLUME_MOUNT + API_AUTH_FILE_KEY;
 
-    private static final String NAME_SUFFIX = "-cruise-control";
-
     // Volume name of the temporary volume used by the TLS sidecar container
     // Because the container shares the pod with other containers, it needs to have unique name
     /*test*/ static final String TLS_SIDECAR_TMP_DIRECTORY_DEFAULT_VOLUME_NAME = "strimzi-tls-sidecar-tmp";
 
-    public static final String ANNO_STRIMZI_IO_LOGGING = Annotations.STRIMZI_DOMAIN + "logging";
-
     public static final String ENV_VAR_CRUISE_CONTROL_METRICS_ENABLED = "CRUISE_CONTROL_METRICS_ENABLED";
 
-    private String zookeeperConnect;
+    private final String zookeeperConnect;
 
     // Configuration defaults
     protected static final int DEFAULT_REPLICAS = 1;
     public static final boolean DEFAULT_CRUISE_CONTROL_METRICS_ENABLED = false;
-    protected static final boolean DEFAULT_WEBSERVER_SECURITY_ENABLED = true;
-    protected static final boolean DEFAULT_WEBSERVER_SSL_ENABLED = true;
 
     // Default probe settings (liveness and readiness) for health checks
     protected static final int DEFAULT_HEALTHCHECK_DELAY = 15;
@@ -136,7 +126,6 @@ public class CruiseControl extends AbstractModel {
 
     public static final String REST_API_PORT_NAME = "rest-api";
     public static final int REST_API_PORT = 9090;
-    protected static final int DEFAULT_BOOTSTRAP_SERVERS_PORT = 9091;
     public static final String MIN_INSYNC_REPLICAS = "min.insync.replicas";
 
     // Cruise Control configuration keys (EnvVariables)
@@ -162,8 +151,6 @@ public class CruiseControl extends AbstractModel {
     protected SecurityContext templateCruiseControlContainerSecurityContext;
     protected SecurityContext templateTlsSidecarContainerSecurityContext;
 
-    private boolean isDeployed;
-
     private static final Map<String, String> DEFAULT_POD_LABELS = new HashMap<>();
     static {
         String value = System.getenv(CO_ENV_VAR_CUSTOM_CRUISE_CONTROL_POD_LABELS);
@@ -182,7 +169,7 @@ public class CruiseControl extends AbstractModel {
         super(reconciliation, resource, APPLICATION_NAME);
         this.name = CruiseControlResources.deploymentName(cluster);
         this.serviceName = CruiseControlResources.serviceName(cluster);
-        this.ancillaryConfigMapName = metricAndLogConfigsName(cluster);
+        this.ancillaryConfigMapName = CruiseControlResources.logAndMetricsConfigMapName(cluster);
         this.replicas = DEFAULT_REPLICAS;
         this.livenessProbeOptions = DEFAULT_HEALTHCHECK_OPTIONS;
         this.readinessProbeOptions = DEFAULT_HEALTHCHECK_OPTIONS;
@@ -191,76 +178,48 @@ public class CruiseControl extends AbstractModel {
         this.logAndMetricsConfigMountPath = LOG_AND_METRICS_CONFIG_VOLUME_MOUNT;
         this.isMetricsEnabled = DEFAULT_CRUISE_CONTROL_METRICS_ENABLED;
 
-        this.zookeeperConnect = defaultZookeeperConnect(cluster);
+        this.zookeeperConnect = ZookeeperCluster.serviceName(cluster) + ":" + ZookeeperCluster.CLIENT_TLS_PORT;
     }
 
-    public static String metricAndLogConfigsName(String cluster) {
-        return CruiseControlResources.logAndMetricsConfigMapName(cluster);
-    }
+    /**
+     * Creates an instance of the Cruise Control model from the custom resource. When Cruise Control is not enabled,
+     * this will return null.
+     *
+     * @param reconciliation    Reconciliation marker used for logging
+     * @param kafkaCr           The Kafka custom resource
+     * @param versions          Supported Kafka versions
+     * @param storage           The actual storage configuration used by the cluster. This might differ from the storage
+     *                          configuration configured by the user in the Kafka CR due to unallowed changes.
+     *
+     * @return                  Instance of the Cruise Control model
+     */
+    @SuppressWarnings({"checkstyle:NPathComplexity", "checkstyle:CyclomaticComplexity"})
+    public static CruiseControl fromCrd(Reconciliation reconciliation, Kafka kafkaCr, KafkaVersion.Lookup versions, Storage storage) {
+        CruiseControlSpec ccSpec = kafkaCr.getSpec().getCruiseControl();
+        KafkaClusterSpec kafkaClusterSpec = kafkaCr.getSpec().getKafka();
 
-    protected void setTlsSidecar(TlsSidecar tlsSidecar) {
-        this.tlsSidecar = tlsSidecar;
-    }
-
-    protected static String defaultZookeeperConnect(String cluster) {
-        return ZookeeperCluster.serviceName(cluster) + ":" + ZookeeperCluster.CLIENT_TLS_PORT;
-    }
-
-    protected static String defaultBootstrapServers(String cluster) {
-        return KafkaResources.bootstrapServiceName(cluster) + ":" + DEFAULT_BOOTSTRAP_SERVERS_PORT;
-    }
-
-    public static String encodeToBase64(String s) {
-        return Base64.getEncoder().encodeToString(s.getBytes(StandardCharsets.US_ASCII));
-    }
-
-    private static boolean isEnabledInConfiguration(CruiseControlConfiguration config, String s1, String s2) {
-        String s = config.getConfigOption(s1, s2);
-        return Boolean.parseBoolean(s);
-    }
-
-    public static boolean isApiAuthEnabled(CruiseControlConfiguration config) {
-        return isEnabledInConfiguration(config, CruiseControlConfigurationParameters.CRUISE_CONTROL_WEBSERVER_SECURITY_ENABLE.getValue(), Boolean.toString(DEFAULT_WEBSERVER_SECURITY_ENABLED));
-    }
-
-    public static boolean isApiSslEnabled(CruiseControlConfiguration config) {
-        return isEnabledInConfiguration(config, CruiseControlConfigurationParameters.CRUISE_CONTROL_WEBSERVER_SSL_ENABLE.getValue(), Boolean.toString(DEFAULT_WEBSERVER_SSL_ENABLED));
-    }
-
-    public static CruiseControl fromCrd(Reconciliation reconciliation, Kafka kafkaAssembly, KafkaVersion.Lookup versions, Storage storage) {
-        CruiseControl cruiseControl = null;
-        CruiseControlSpec spec = kafkaAssembly.getSpec().getCruiseControl();
-        KafkaClusterSpec kafkaClusterSpec = kafkaAssembly.getSpec().getKafka();
-
-        if (spec != null) {
-            cruiseControl = new CruiseControl(reconciliation, kafkaAssembly);
-            cruiseControl.isDeployed = true;
+        if (ccSpec != null) {
+            CruiseControl cruiseControl = new CruiseControl(reconciliation, kafkaCr);
 
             cruiseControl.setReplicas(DEFAULT_REPLICAS);
-            String image = spec.getImage();
+
+            String image = ccSpec.getImage();
             if (image == null) {
                 image = System.getenv().getOrDefault(ClusterOperatorConfig.STRIMZI_DEFAULT_CRUISE_CONTROL_IMAGE, versions.kafkaImage(kafkaClusterSpec.getImage(), versions.defaultVersion().version()));
             }
             cruiseControl.setImage(image);
 
-            TlsSidecar tlsSidecar = spec.getTlsSidecar();
-            if (tlsSidecar == null) {
-                tlsSidecar = new TlsSidecar();
-            }
-
-            String tlsSideCarImage = tlsSidecar.getImage();
+            String tlsSideCarImage = ccSpec.getTlsSidecar() != null ? ccSpec.getTlsSidecar().getImage() : null;
             if (tlsSideCarImage == null) {
                 tlsSideCarImage = System.getenv().getOrDefault(ClusterOperatorConfig.STRIMZI_DEFAULT_TLS_SIDECAR_CRUISE_CONTROL_IMAGE, versions.kafkaImage(kafkaClusterSpec.getImage(), versions.defaultVersion().version()));
             }
-
-            tlsSidecar.setImage(tlsSideCarImage);
             cruiseControl.tlsSidecarImage = tlsSideCarImage;
-            cruiseControl.setTlsSidecar(tlsSidecar);
+            cruiseControl.tlsSidecar = ccSpec.getTlsSidecar();
 
-            cruiseControl = cruiseControl.updateConfiguration(spec);
+            cruiseControl.updateConfiguration(ccSpec);
             CruiseControlConfiguration ccConfiguration = (CruiseControlConfiguration) cruiseControl.getConfiguration();
-            cruiseControl.sslEnabled = isApiSslEnabled(ccConfiguration);
-            cruiseControl.authEnabled = isApiAuthEnabled(ccConfiguration);
+            cruiseControl.sslEnabled = ccConfiguration.isApiSslEnabled();
+            cruiseControl.authEnabled = ccConfiguration.isApiAuthEnabled();
 
             KafkaConfiguration configuration = new KafkaConfiguration(reconciliation, kafkaClusterSpec.getConfig().entrySet());
             if (configuration.getConfigOption(MIN_INSYNC_REPLICAS) != null) {
@@ -269,35 +228,72 @@ public class CruiseControl extends AbstractModel {
 
             // To avoid illegal storage configurations provided by the user,
             // we rely on the storage configuration provided by the KafkaAssemblyOperator
-            cruiseControl.capacity =  new Capacity(kafkaAssembly.getSpec(), storage);
+            cruiseControl.capacity = new Capacity(kafkaCr.getSpec(), storage);
 
             // Parse different types of metrics configurations
-            ModelUtils.parseMetrics(cruiseControl, spec);
+            ModelUtils.parseMetrics(cruiseControl, ccSpec);
 
-            if (spec.getReadinessProbe() != null) {
-                cruiseControl.setReadinessProbe(spec.getReadinessProbe());
+            if (ccSpec.getReadinessProbe() != null) {
+                cruiseControl.setReadinessProbe(ccSpec.getReadinessProbe());
             }
 
-            if (spec.getLivenessProbe() != null) {
-                cruiseControl.setLivenessProbe(spec.getLivenessProbe());
+            if (ccSpec.getLivenessProbe() != null) {
+                cruiseControl.setLivenessProbe(ccSpec.getLivenessProbe());
             }
 
-            Logging logging = spec.getLogging();
+            Logging logging = ccSpec.getLogging();
             cruiseControl.setLogging(logging == null ? new InlineLogging() : logging);
 
-            cruiseControl.setGcLoggingEnabled(spec.getJvmOptions() == null ? DEFAULT_JVM_GC_LOGGING_ENABLED : spec.getJvmOptions().isGcLoggingEnabled());
-            cruiseControl.setJvmOptions(spec.getJvmOptions());
+            cruiseControl.setGcLoggingEnabled(ccSpec.getJvmOptions() == null ? DEFAULT_JVM_GC_LOGGING_ENABLED : ccSpec.getJvmOptions().isGcLoggingEnabled());
+            cruiseControl.setJvmOptions(ccSpec.getJvmOptions());
 
-            cruiseControl.setResources(spec.getResources());
-            cruiseControl.setOwnerReference(kafkaAssembly);
-            cruiseControl = updateTemplate(spec, cruiseControl);
+            cruiseControl.setResources(ccSpec.getResources());
+            cruiseControl.setOwnerReference(kafkaCr);
+
+            if (ccSpec.getTemplate() != null) {
+                CruiseControlTemplate template = ccSpec.getTemplate();
+
+                ModelUtils.parsePodTemplate(cruiseControl, template.getPod());
+                ModelUtils.parseInternalServiceTemplate(cruiseControl, template.getApiService());
+
+                if (template.getDeployment() != null && template.getDeployment().getMetadata() != null) {
+                    cruiseControl.templateDeploymentLabels = template.getDeployment().getMetadata().getLabels();
+                    cruiseControl.templateDeploymentAnnotations = template.getDeployment().getMetadata().getAnnotations();
+                }
+
+                if (template.getCruiseControlContainer() != null && template.getCruiseControlContainer().getEnv() != null) {
+                    cruiseControl.templateCruiseControlContainerEnvVars = template.getCruiseControlContainer().getEnv();
+                }
+
+                if (template.getTlsSidecarContainer() != null && template.getTlsSidecarContainer().getEnv() != null) {
+                    cruiseControl.templateTlsSidecarContainerEnvVars = template.getTlsSidecarContainer().getEnv();
+                }
+
+                if (template.getCruiseControlContainer() != null && template.getCruiseControlContainer().getSecurityContext() != null) {
+                    cruiseControl.templateCruiseControlContainerSecurityContext = template.getCruiseControlContainer().getSecurityContext();
+                }
+
+                if (template.getTlsSidecarContainer() != null && template.getTlsSidecarContainer().getSecurityContext() != null) {
+                    cruiseControl.templateTlsSidecarContainerSecurityContext = template.getTlsSidecarContainer().getSecurityContext();
+                }
+
+                if (template.getServiceAccount() != null && template.getServiceAccount().getMetadata() != null) {
+                    cruiseControl.templateServiceAccountLabels = template.getServiceAccount().getMetadata().getLabels();
+                    cruiseControl.templateServiceAccountAnnotations = template.getServiceAccount().getMetadata().getAnnotations();
+                }
+
+                ModelUtils.parsePodDisruptionBudgetTemplate(cruiseControl, template.getPodDisruptionBudget());
+            }
+
             cruiseControl.templatePodLabels = Util.mergeLabelsOrAnnotations(cruiseControl.templatePodLabels, DEFAULT_POD_LABELS);
-        }
 
-        return cruiseControl;
+            return cruiseControl;
+        } else {
+            return null;
+        }
     }
 
-    public CruiseControl updateConfiguration(CruiseControlSpec spec) {
+    public void updateConfiguration(CruiseControlSpec spec) {
         CruiseControlConfiguration userConfiguration = new CruiseControlConfiguration(reconciliation, spec.getConfig().entrySet());
         for (Map.Entry<String, String> defaultEntry : CruiseControlConfiguration.getCruiseControlDefaultPropertiesMap().entrySet()) {
             if (userConfiguration.getConfigOption(defaultEntry.getKey()) == null) {
@@ -307,7 +303,6 @@ public class CruiseControl extends AbstractModel {
         // Ensure that the configured anomaly.detection.goals are a sub-set of the default goals
         checkGoals(userConfiguration);
         this.setConfiguration(userConfiguration);
-        return this;
     }
 
     /**
@@ -348,59 +343,8 @@ public class CruiseControl extends AbstractModel {
         }
     }
 
-    public static CruiseControl updateTemplate(CruiseControlSpec spec, CruiseControl cruiseControl) {
-        if (spec.getTemplate() != null) {
-            CruiseControlTemplate template = spec.getTemplate();
-
-            ModelUtils.parsePodTemplate(cruiseControl, template.getPod());
-            ModelUtils.parseInternalServiceTemplate(cruiseControl, template.getApiService());
-
-            if (template.getDeployment() != null && template.getDeployment().getMetadata() != null) {
-                cruiseControl.templateDeploymentLabels = template.getDeployment().getMetadata().getLabels();
-                cruiseControl.templateDeploymentAnnotations = template.getDeployment().getMetadata().getAnnotations();
-            }
-
-            if (template.getCruiseControlContainer() != null && template.getCruiseControlContainer().getEnv() != null) {
-                cruiseControl.templateCruiseControlContainerEnvVars = template.getCruiseControlContainer().getEnv();
-            }
-
-            if (template.getTlsSidecarContainer() != null && template.getTlsSidecarContainer().getEnv() != null) {
-                cruiseControl.templateTlsSidecarContainerEnvVars = template.getTlsSidecarContainer().getEnv();
-            }
-
-            if (template.getCruiseControlContainer() != null && template.getCruiseControlContainer().getSecurityContext() != null) {
-                cruiseControl.templateCruiseControlContainerSecurityContext = template.getCruiseControlContainer().getSecurityContext();
-            }
-
-            if (template.getTlsSidecarContainer() != null && template.getTlsSidecarContainer().getSecurityContext() != null) {
-                cruiseControl.templateTlsSidecarContainerSecurityContext = template.getTlsSidecarContainer().getSecurityContext();
-            }
-
-            if (template.getServiceAccount() != null && template.getServiceAccount().getMetadata() != null) {
-                cruiseControl.templateServiceAccountLabels = template.getServiceAccount().getMetadata().getLabels();
-                cruiseControl.templateServiceAccountAnnotations = template.getServiceAccount().getMetadata().getAnnotations();
-            }
-
-            ModelUtils.parsePodDisruptionBudgetTemplate(cruiseControl, template.getPodDisruptionBudget());
-        }
-        return cruiseControl;
-    }
-
-    public static String cruiseControlName(String cluster) {
-        return CruiseControlResources.deploymentName(cluster);
-    }
-
-    public static String serviceName(String cluster) {
-        return CruiseControlResources.serviceName(cluster);
-    }
-
     public Service generateService() {
-        if (!isDeployed()) {
-            return null;
-        }
-
-        List<ServicePort> ports = Collections.singletonList(createServicePort(REST_API_PORT_NAME, REST_API_PORT, REST_API_PORT, "TCP"));
-        return createService("ClusterIP", ports, templateServiceAnnotations);
+        return createService("ClusterIP", List.of(createServicePort(REST_API_PORT_NAME, REST_API_PORT, REST_API_PORT, "TCP")), templateServiceAnnotations);
     }
 
     protected List<ContainerPort> getContainerPortList() {
@@ -416,27 +360,23 @@ public class CruiseControl extends AbstractModel {
     }
 
     protected List<Volume> getVolumes(boolean isOpenShift) {
-        return Arrays.asList(createTempDirVolume(),
+        return List.of(createTempDirVolume(),
                 createTempDirVolume(TLS_SIDECAR_TMP_DIRECTORY_DEFAULT_VOLUME_NAME),
-                createSecretVolume(TLS_SIDECAR_CC_CERTS_VOLUME_NAME, CruiseControl.secretName(cluster), isOpenShift),
+                createSecretVolume(TLS_SIDECAR_CC_CERTS_VOLUME_NAME, CruiseControlResources.secretName(cluster), isOpenShift),
                 createSecretVolume(TLS_SIDECAR_CA_CERTS_VOLUME_NAME, AbstractModel.clusterCaCertSecretName(cluster), isOpenShift),
                 createSecretVolume(API_AUTH_CONFIG_VOLUME_NAME, CruiseControlResources.apiSecretName(cluster), isOpenShift),
                 createConfigMapVolume(logAndMetricsConfigVolumeName, ancillaryConfigMapName));
     }
 
     protected List<VolumeMount> getVolumeMounts() {
-        return Arrays.asList(createTempDirVolumeMount(),
+        return List.of(createTempDirVolumeMount(),
                 createVolumeMount(CruiseControl.TLS_SIDECAR_CC_CERTS_VOLUME_NAME, CruiseControl.TLS_SIDECAR_CC_CERTS_VOLUME_MOUNT),
                 createVolumeMount(CruiseControl.TLS_SIDECAR_CA_CERTS_VOLUME_NAME, CruiseControl.TLS_SIDECAR_CA_CERTS_VOLUME_MOUNT),
                 createVolumeMount(CruiseControl.API_AUTH_CONFIG_VOLUME_NAME, CruiseControl.API_AUTH_CONFIG_VOLUME_MOUNT),
                 createVolumeMount(logAndMetricsConfigVolumeName, logAndMetricsConfigMountPath));
     }
 
-    public Deployment generateDeployment(boolean isOpenShift, Map<String, String> annotations, ImagePullPolicy imagePullPolicy, List<LocalObjectReference> imagePullSecrets) {
-        if (!isDeployed()) {
-            return null;
-        }
-
+    public Deployment generateDeployment(boolean isOpenShift, ImagePullPolicy imagePullPolicy, List<LocalObjectReference> imagePullSecrets) {
         DeploymentStrategy updateStrategy = new DeploymentStrategyBuilder()
                 .withType("RollingUpdate")
                 .withRollingUpdate(new RollingUpdateDeploymentBuilder()
@@ -481,11 +421,6 @@ public class CruiseControl extends AbstractModel {
                 .withSecurityContext(templateCruiseControlContainerSecurityContext)
                 .build();
 
-        String tlsSidecarImage = this.tlsSidecarImage;
-        if (tlsSidecar != null && tlsSidecar.getImage() != null) {
-            tlsSidecarImage = tlsSidecar.getImage();
-        }
-
         Container tlsSidecarContainer = new ContainerBuilder()
                 .withName(TLS_SIDECAR_NAME)
                 .withImage(tlsSidecarImage)
@@ -517,7 +452,7 @@ public class CruiseControl extends AbstractModel {
         List<EnvVar> varList = new ArrayList<>();
 
         varList.add(buildEnvVar(ENV_VAR_CRUISE_CONTROL_METRICS_ENABLED, String.valueOf(isMetricsEnabled)));
-        varList.add(buildEnvVar(ENV_VAR_STRIMZI_KAFKA_BOOTSTRAP_SERVERS, String.valueOf(defaultBootstrapServers(cluster))));
+        varList.add(buildEnvVar(ENV_VAR_STRIMZI_KAFKA_BOOTSTRAP_SERVERS, KafkaResources.bootstrapServiceName(cluster) + ":" + KafkaCluster.REPLICATION_PORT));
         varList.add(buildEnvVar(ENV_VAR_STRIMZI_KAFKA_GC_LOG_ENABLED, String.valueOf(gcLoggingEnabled)));
         varList.add(buildEnvVar(ENV_VAR_MIN_INSYNC_REPLICAS, String.valueOf(minInsyncReplicas)));
 
@@ -527,7 +462,7 @@ public class CruiseControl extends AbstractModel {
         varList.add(buildEnvVar(ENV_VAR_API_AUTH_ENABLED,  String.valueOf(this.authEnabled)));
         varList.add(buildEnvVar(ENV_VAR_API_USER,  API_USER_NAME));
         varList.add(buildEnvVar(ENV_VAR_API_PORT,  String.valueOf(REST_API_PORT)));
-        varList.add(buildEnvVar(ENV_VAR_API_HEALTHCHECK_PATH,  String.valueOf(API_HEALTHCHECK_PATH)));
+        varList.add(buildEnvVar(ENV_VAR_API_HEALTHCHECK_PATH, API_HEALTHCHECK_PATH));
 
         ModelUtils.heapOptions(varList, 1.0, 0L, getJvmOptions(), getResources());
         ModelUtils.jvmPerformanceOptions(varList, getJvmOptions());
@@ -573,15 +508,6 @@ public class CruiseControl extends AbstractModel {
         return CruiseControlResources.serviceAccountName(cluster);
     }
 
-    /**
-     * Get the name of the Cruise Control service account given the name of the {@code cluster}.
-     * @param cluster The cluster name
-     * @return The name of the Cruise Control service account.
-     */
-    public static String cruiseControlServiceAccountName(String cluster) {
-        return CruiseControlResources.serviceAccountName(cluster);
-    }
-
     protected List<EnvVar> getTlsSidecarEnvVars() {
         List<EnvVar> varList = new ArrayList<>();
         varList.add(ModelUtils.tlsSidecarLogEnvVar(tlsSidecar));
@@ -593,25 +519,6 @@ public class CruiseControl extends AbstractModel {
         addContainerEnvsToExistingEnvs(varList, templateTlsSidecarContainerEnvVars);
 
         return varList;
-    }
-
-    /**
-     * Generates the name of the Cruise Control secret with certificates for connecting to Kafka brokers
-     *
-     * @param kafkaCluster  Name of the Kafka Custom Resource
-     * @return  Name of the Cruise Control secret
-     */
-    public static String secretName(String kafkaCluster) {
-        return CruiseControlResources.secretName(kafkaCluster);
-    }
-
-    /**
-     * Returns whether the Cruise Control is enabled or not
-     *
-     * @return True if Cruise Control is enabled. False otherwise.
-     */
-    private boolean isDeployed() {
-        return isDeployed;
     }
 
     /**
@@ -633,9 +540,9 @@ public class CruiseControl extends AbstractModel {
                 API_USER_NAME + ": " + apiUserPassword + "," + API_USER_ROLE + "\n";
 
         Map<String, String> data = new HashMap<>(3);
-        data.put(API_ADMIN_PASSWORD_KEY, encodeToBase64(apiAdminPassword));
-        data.put(API_USER_PASSWORD_KEY, encodeToBase64(apiUserPassword));
-        data.put(API_AUTH_FILE_KEY, encodeToBase64(authCredentialsFile));
+        data.put(API_ADMIN_PASSWORD_KEY, Util.encodeToBase64(apiAdminPassword));
+        data.put(API_USER_PASSWORD_KEY, Util.encodeToBase64(apiUserPassword));
+        data.put(API_AUTH_FILE_KEY, Util.encodeToBase64(authCredentialsFile));
 
         return data;
     }
@@ -646,9 +553,6 @@ public class CruiseControl extends AbstractModel {
      * @return The generated Secret.
      */
     public Secret generateApiSecret() {
-        if (!isDeployed()) {
-            return null;
-        }
         return ModelUtils.createSecret(CruiseControlResources.apiSecretName(cluster), namespace, labels, createOwnerReference(), generateCruiseControlApiCredentials(), Collections.emptyMap(), Collections.emptyMap());
     }
 
@@ -657,21 +561,19 @@ public class CruiseControl extends AbstractModel {
      * internal communication with Kafka and Zookeeper.
      * It also contains the related Cruise Control private key.
      *
-     * @param kafka The Kafka custom resource
+     * @param namespace Namespace in which the Cruise Control cluster runs
+     * @param kafkaName Name of the Kafka cluster (it is used for the SANs in the certificate)
      * @param clusterCa The cluster CA.
      * @param isMaintenanceTimeWindowsSatisfied Indicates whether we are in the maintenance window or not.
      *                                          This is used for certificate renewals
+     *
      * @return The generated Secret.
      */
-    public Secret generateSecret(Kafka kafka, ClusterCa clusterCa, boolean isMaintenanceTimeWindowsSatisfied) {
-        if (!isDeployed()) {
-            return null;
-        }
-
+    public Secret generateCertificatesSecret(String namespace, String kafkaName, ClusterCa clusterCa, boolean isMaintenanceTimeWindowsSatisfied) {
         Map<String, CertAndKey> ccCerts = new HashMap<>(4);
         LOGGER.debugCr(reconciliation, "Generating certificates");
         try {
-            ccCerts = clusterCa.generateCcCerts(kafka, isMaintenanceTimeWindowsSatisfied);
+            ccCerts = clusterCa.generateCcCerts(namespace, kafkaName, isMaintenanceTimeWindowsSatisfied);
         } catch (IOException e) {
             LOGGER.warnCr(reconciliation, "Error while generating certificates", e);
         }
@@ -686,16 +588,8 @@ public class CruiseControl extends AbstractModel {
         data.put(keyCertName + ".p12", cert.keyStoreAsBase64String());
         data.put(keyCertName + ".password", cert.storePasswordAsBase64String());
 
-        return createSecret(CruiseControl.secretName(cluster), data,
+        return createSecret(CruiseControlResources.secretName(cluster), data,
                 Collections.singletonMap(clusterCa.caCertGenerationAnnotation(), String.valueOf(clusterCa.certGeneration())));
-    }
-
-    /**
-     * @param cluster The name of the cluster.
-     * @return The name of the network policy.
-     */
-    public static String policyName(String cluster) {
-        return cluster + NETWORK_POLICY_KEY_SUFFIX + NAME_SUFFIX;
     }
 
     /**
@@ -742,14 +636,14 @@ public class CruiseControl extends AbstractModel {
 
         NetworkPolicy networkPolicy = new NetworkPolicyBuilder()
                 .withNewMetadata()
-                    .withName(policyName(cluster))
+                    .withName(CruiseControlResources.networkPolicyName(cluster))
                     .withNamespace(namespace)
                     .withLabels(labels.toMap())
                     .withOwnerReferences(createOwnerReference())
                 .endMetadata()
                 .withNewSpec()
                     .withNewPodSelector()
-                        .addToMatchLabels(Labels.STRIMZI_NAME_LABEL, cruiseControlName(cluster))
+                        .addToMatchLabels(Labels.STRIMZI_NAME_LABEL, CruiseControlResources.deploymentName(cluster))
                     .endPodSelector()
                 .withIngress(rules)
                 .endSpec()
@@ -766,12 +660,14 @@ public class CruiseControl extends AbstractModel {
 
     /**
      * Transforms properties to log4j2 properties file format and adds property for reloading the config
+     *
      * @param properties map with properties
+     *
      * @return modified string with monitorInterval
      */
     @Override
     public String createLog4jProperties(OrderedProperties properties) {
-        if (!properties.asMap().keySet().contains("monitorInterval")) {
+        if (!properties.asMap().containsKey("monitorInterval")) {
             properties.addPair("monitorInterval", "30");
         }
         return super.createLog4jProperties(properties);
